# gala-savewins-plugin

./: README.md  meson.build
debian/: changelog  control  copyright
src/: Main.vala
